crates/service/tests/diagnostics/snapshots/features__diagnostics__unknown_instr__with_fuzzy.snap
---
source: crates/service/tests/diagnostics/unknown_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 15
        },
        "end": {
          "line": 0,
          "character": 18
        }
      },
      "severity": 1,
      "code": "unknown-instr",
      "source": "wat",
      "message": "unknown instruction `log`, do you mean `local.get`?"
    }
  ]
}
